sumar y restar productos

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"></script>
     <!-- Mí JS -->
-    <script src="preEntrega3Messa.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
