--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
 
   </header>
   <div id="fecha">
-    <p>Fecha</p>
+  
+  </div>
+  <div id="hora">
+  
   </div>
   <div class="section">
     <section class="section1 parte1">
