--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"></script>
     <!-- Mí JS -->
+    <script src="class.js"></script> 
     <script src="main.js"></script>
 </body>
 
